# sentiment_analysis_model

./: Dockerfile  Dockerfile.api  Dockerfile.training  README.md  docker-compose.yaml  pyproject.toml  run.sh
model_api_service/: logger.py  main.py
sentiment_analysis_model/: data_loader.py  model_evaluator.py  model_monitor.py  model_trainer.py  run_prediction.py  run_training_pipeline.py  sentiment_analyser.py  text_preprocessor.py  utils.py
src/: Dockerfile.api  Dockerfile.training  docker-compose.yaml  pyproject.toml  run.sh
src/model_api_service/: main.py  sentiment_analysis_response.py
src/sentiment_analysis_model/: data_loader.py  model_evaluator.py  model_trainer.py  run_pipeline.py  run_prediction.py  run_training_pipeline.py  sentiment_analyser.py  text_preprocessor.py  utils.py
tests/: test_run_pipeline.py  test_run_training_pipeline.py  test_sentiment_analyser.py  test_text_preprocessor.py
