[tool.poetry]
name = "sentiment-analysis-model"
version = "0.1.0"
description = "Sentiment analysis model with API service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sentiment_analysis_model"}, {include = "model_api_service"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "*"
pandas = "*"
numpy = "*"
joblib = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
nltk = "*"
# Only essential visualization and logging
matplotlib = "*"
loguru = "*"

# Development dependencies are now optional
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "sentiment_analysis_model.run_training_pipeline:main"
predict = "sentiment_analysis_model.run_prediction:main"
api = "model_api_service.main:start_server"